[package]
name = "math"
version = "0.1.0"
authors = ["Cassandra Pearson <cnegrich@gmail.com>"]
edition = "2021"

[[bin]]
name = "math"
path = "src/main.rs"

[lib]
name = "mathematics"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.56"
thiserror = "1.0.30"
rstest = "0.7.0"
rand = "0.8.3"
num = "0.4.0"
cgmath = "0.18.0"
git-version = "0.3.5"